# FoodSea-Backend

./: .dockerignore  .editorconfig  .env.photo-search.local.example  .gitattributes  .gitignore  .golangci.yml  Dockerfile  Makefile  README.md  api  docker-compose.yml  go.mod  go.sum  go.work  openapi.yml  run-core.sh  term-paper.yaml
services/ml/: Dockerfile  Makefile  pyproject.toml  requirements-builder.txt  requirements-runtime.txt  requirements.txt
services/ml/foodsea_ml_service.egg-info/: SOURCES.txt  requires.txt
services/ml/scripts/: build_voice_index.py
services/ml/src/: __init__.py  config.py  data_loader.py  index.py  main.py  service.py  weight_probe.py
services/ml/src/analogs/: __init__.py  feature_builder.py  servicer.py  weight_probe.py
services/ml/src/embeddings/: cache.py  gemini_client.py
services/ml/src/photo_search/: __init__.py  build_index.py  embeddings.py  fusion.py  index.py  parser.py  rebuild_index.py  service.py
services/ml/src/proto/: __init__.py  analogs_pb2.py  analogs_pb2_grpc.py  catalog_pb2.py  catalog_pb2_grpc.py  voice_pb2.py  voice_pb2_grpc.py
services/ml/tests/: conftest.py  test_build_voice_index_script.py  test_config.py  test_data_loader.py  test_feature_builder.py  test_index.py  test_main_photo_search_config.py  test_main_voice_registration.py  test_photo_embeddings.py  test_photo_fusion.py  test_photo_index.py  test_photo_parser.py  test_photo_rebuild.py  test_photo_service.py  test_requirements_sync.py  test_service.py  test_shared_rebuild_script.py  test_voice_pipeline_fixtures.py  test_voice_servicer.py
(+759 files in other folders)
